Initial commit for Railway deployment

--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,8 @@
 
             <div id="response-container" class="hidden">
                 <div class="response-content" id="response-text"></div>
-                <div class="debug-info" id="debug-display">
-                    <span class="debug-label">DEBUG:</span> Quest ID: <span id="debug-quest-id">-</span> | Step: <span id="debug-step">-</span> | Confidence: <span id="debug-confidence">-</span>
-                </div>
                 <div class="confidence-indicator hidden" id="confidence-display">
-                    <span class="label">Confidence:</span> <span id="confidence-value"></span>
+                    <span class="label">Confidence:</span> <span id="confidence-value"></span> | Quest ID: <span id="debug-quest-id">-</span> | Step: <span id="debug-step">-</span>
                 </div>
             </div>
         </main>
