Update quests, server, and UI components

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <h1>Noita Quest Helper</h1>
-            <p class="subtitle">Whispers from the void...</p>
+            <p class="subtitle">Hamis is watching...</p>
         </header>
         
         <main>
