UI clean and context cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     <div class="container">
         <header>
             <h1>Noita Quest Helper</h1>
-            <p class="subtitle">Hamis is watching...</p>
+            <p class="subtitle">Spoiler free hints to keep you on the questline</p>
         </header>
         
         <main>
             <div class="input-section">
-                <label for="query-input">What are you stuck on?</label>
+                <label for="query-input">What have you discovered?</label>
                 <input type="text" id="query-input" placeholder="Describe where you are and what you've done...">
-                <button id="submit-btn">Consult the Spirits</button>
+                <button id="submit-btn">Consult the Gods</button>
             </div>
 
             <div id="loading" class="hidden">
